--- a/first-page.html
+++ b/first-page.html
@@ -22,10 +22,10 @@
                   <img src="https://img2.freepng.ru/20180412/clq/kisspng-company-kara-pardaz-corp-information-industry-logo-5acf00701cb9f2.5213935915235155041177.jpg" alt="" />
                </a>
                <ul class="menu" id="menu">
-                  <li><a href="index.html">Home</a></li>
-                  <li><a href="/portfolio.html">About us</a></li>
+                  <li><a href="index.html">Домашняя страница</a></li>
+                  <li><a href="/portfolio.html">Наши работы</a></li>
                   <li><a href="#">Prices</a></li>
-                  <li><a href="#">Contact</a></li>
+                  <li><a href="#">Контакты</a></li>
                </ul>
             </div>
          </div>
