--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
    <body>
       <div class="index-menu">
          <ul class="menu-list">
-            <li class="menu-item"><a href="">link</a></li>
-            <li class="menu-item"><a href="">link</a></li>
-            <li class="menu-item"><a href="">link</a></li>
+            <li class="menu-item"><a href="/portfolio.html">Наши работы</a></li>
+            <li class="menu-item"><a href="">Prices</a></li>
+            <li class="menu-item"><a href="">Наши контакты</a></li>
             <li class="menu-item"><a href="">link</a></li>
          </ul>
       </div>
