--- a/first-page.html
+++ b/first-page.html
@@ -55,7 +55,7 @@
                   <div class="work" data-name="work-name">
                      <div class="work-container">
                         <div class="work-icon">
-                           <img src="" alt="icon" />
+                           <img src="/image/icons/excavator.png" alt="icon" />
                         </div>
                         <div class="work-text">
                            <p>
@@ -77,7 +77,7 @@
                   <div class="work" data-name="work-name">
                      <div class="work-container">
                         <div class="work-icon">
-                           <img src="" alt="icon" />
+                           <img src="/image/icons/grass.png" alt="icon" />
                         </div>
                         <div class="work-text">
                            <p>
@@ -99,7 +99,7 @@
                   <div class="work" data-name="work-name">
                      <div class="work-container">
                         <div class="work-icon">
-                           <img src="" alt="icon" />
+                           <img src="/image/icons/shovel.png" alt="icon" />
                         </div>
                         <div class="work-text">
                            <p>
