--- a/index.html
+++ b/index.html
@@ -2,32 +2,56 @@
 <html lang="en">
    <head>
       <meta charset="UTF-8" />
-      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <meta
+         http-equiv="X-UA-Compatible"
+         content="IE=edge" />
+      <meta
+         name="viewport"
+         content="width=device-width, initial-scale=1.0" />
       <title>Bakeev</title>
-      <link rel="stylesheet" href="/style/index.css" />
+      <link
+         rel="stylesheet"
+         href="/style/index.css" />
    </head>
    <body>
-      <div class="index-menu">
+      <!-- <div class="index-menu">
          <ul class="menu-list">
-            <li class="menu-item"><a href="/portfolio.html">Наши работы</a></li>
-            <li class="menu-item"><a href="">Prices</a></li>
-            <li class="menu-item"><a href="">Наши контакты</a></li>
-            <li class="menu-item"><a href="">link</a></li>
+            <li class="menu-item">
+               <a href="/portfolio.html"
+                  >Наши работы</a
+               >
+            </li>
+            <li class="menu-item">
+               <a href="">Prices</a>
+            </li>
+            <li class="menu-item">
+               <a href="">Наши контакты</a>
+            </li>
+            <li class="menu-item">
+               <a href="">link</a>
+            </li>
          </ul>
-      </div>
+      </div> -->
       <div class="wrapper-index">
          <div class="index">
             <div class="index-title">
-               <h1 class="index-title-title">Бакеев Групп</h1>
-               <p class="index-title-phar">ландшафтная компания</p>
+               <h1 class="index-title-title">
+                  Бакеев Групп
+               </h1>
+               <p class="index-title-phar">
+                  ландшафтная компания
+               </p>
             </div>
             <!-- <div class="index-link">
         <a href="/first-page.html">станьте нашим патнером<br><span>войти</span></a>
       </div> -->
-            <a class="index-link" href="/first-page.html">
+            <a
+               class="index-link"
+               href="/first-page.html">
                <div class="index-link-div">
-                  станьте нашим патнером<br /><span>войти</span>
+                  станьте нашим патнером<br /><span
+                     >войти</span
+                  >
                </div>
             </a>
          </div>
