--- a/portfolio.html
+++ b/portfolio.html
@@ -8,8 +8,7 @@
       <!-- подключил свайпер -->
       <link
          rel="stylesheet"
-         href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
-      />
+         href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
       <title>Portfolio</title>
    </head>
    <body>
@@ -26,14 +25,19 @@
                <a href="#" class="logo" id="logo">
                   <img
                      src="https://img2.freepng.ru/20180412/clq/kisspng-company-kara-pardaz-corp-information-industry-logo-5acf00701cb9f2.5213935915235155041177.jpg"
-                     alt=""
-                  />
+                     alt="" />
                </a>
                <ul class="menu" id="menu">
-                  <li><a href="index.html">Домашняя страница</a></li>
-                  <li><a href="#">Наши работы</a></li>
+                  <li>
+                     <a href="index.html">Домашняя страница</a>
+                  </li>
+                  <li>
+                     <a href="#">Наши работы</a>
+                  </li>
                   <li><a href="#">Prices</a></li>
-                  <li><a href="#">Наши Контакты</a></li>
+                  <li>
+                     <a href="#">Наши Контакты</a>
+                  </li>
                </ul>
             </div>
          </div>
@@ -70,32 +74,27 @@
                            <div class="swiper-slide">
                               <img
                                  src="/image/boksitogorsk/boksit-1.jpg"
-                                 alt=""
-                              />
+                                 alt="" />
                            </div>
                            <div class="swiper-slide">
                               <img
                                  src="/image/boksitogorsk/boksit-3.jpg"
-                                 alt=""
-                              />
+                                 alt="" />
                            </div>
                            <div class="swiper-slide">
                               <img
                                  src="/image/boksitogorsk/boksit-4.jpg"
-                                 alt=""
-                              />
+                                 alt="" />
                            </div>
                            <div class="swiper-slide">
                               <img
                                  src="/image/boksitogorsk/boksit-2.jpg"
-                                 alt=""
-                              />
+                                 alt="" />
                            </div>
                            <div class="swiper-slide">
                               <img
                                  src="/image/boksitogorsk/boksit-5.jpg"
-                                 alt=""
-                              />
+                                 alt="" />
                            </div>
                         </div>
                         <!-- If we need pagination -->
@@ -115,23 +114,21 @@
                      <h2>TITLE</h2>
                   </div>
                   <div class="pictures-wrapper content">
-                     
-                        <div class="picture-item">
-                           <img src="/image/boksitogorsk/boksit-1.jpg" alt="" />
-                        </div>
-                        <div class="picture-item">
-                           <img src="/image/boksitogorsk/boksit-3.jpg" alt="" />
-                        </div>
-                        <div class="picture-item">
-                           <img src="/image/boksitogorsk/boksit-4.jpg" alt="" />
-                        </div>
-                        <div class="picture-item">
-                           <img src="/image/boksitogorsk/boksit-2.jpg" alt="" />
-                        </div>
-                        <div class="picture-item">
-                           <img src="/image/boksitogorsk/boksit-5.jpg" alt="" />
-                        </div>
-                    
+                     <div class="picture-item">
+                        <img src="/image/boksitogorsk/boksit-1.jpg" alt="" />
+                     </div>
+                     <div class="picture-item">
+                        <img src="/image/boksitogorsk/boksit-3.jpg" alt="" />
+                     </div>
+                     <div class="picture-item">
+                        <img src="/image/boksitogorsk/boksit-4.jpg" alt="" />
+                     </div>
+                     <div class="picture-item">
+                        <img src="/image/boksitogorsk/boksit-2.jpg" alt="" />
+                     </div>
+                     <div class="picture-item">
+                        <img src="/image/boksitogorsk/boksit-5.jpg" alt="" />
+                     </div>
                   </div>
                </section>
             </div>
