закончил стартовую страницу

--- a/form.html
+++ b/form.html
@@ -38,8 +38,9 @@
                   </li>
                   <li><a href="#">Prices</a></li>
                   <li>
-                     <a href="/form copy.html">Контакты</a>
+                     <a href="#">Контакты</a>
                   </li>
+                  
                </ul>
             </div>
          </div>
