--- a/ourWork.html
+++ b/ourWork.html
@@ -50,17 +50,33 @@
       <main class="main">
          <div class="container container-works-block">
             <section class="works-block">
-               <a href="/boksitogorsk.html"
+               <a href="/works/boksitogorsk.html"
                   ><div class="work-item">Бокситогорск</div></a
                >
-               <a href="/hizelki.html"><div class="work-item">Хизельки</div></a>
-               <a href="/house_slose_see.html"><div class="work-item">Дом у моря</div></a>
-               <a href="/kiskelovo.html"><div class="work-item">Кисколово</div></a>
-               <a href="/lednevo.html"><div class="work-item">Леднево</div></a>
-               <a href="/novo_toksovo.html"><div class="work-item">Новое Токсово</div></a>
-               <a href="/ozerki.html"><div class="work-item">Озерки</div></a>
-               <a href="/strawberry.html"><div class="work-item">Земляничная поляна</div></a>
-               <a href="/strelna.html"><div class="work-item">Стрельна</div></a>
+               <a href="/works/hizelki.html"
+                  ><div class="work-item">Хизельки</div></a
+               >
+               <a href="/works/house_slose_see.html"
+                  ><div class="work-item">Дом у моря</div></a
+               >
+               <a href="/works/kiskelovo.html"
+                  ><div class="work-item">Кисколово</div></a
+               >
+               <a href="/works/lednevo.html"
+                  ><div class="work-item">Леднево</div></a
+               >
+               <a href="/works/novo_toksovo.html"
+                  ><div class="work-item">Новое Токсово</div></a
+               >
+               <a href="/works/ozerki.html"
+                  ><div class="work-item">Озерки</div></a
+               >
+               <a href="/works/strawberry.html"
+                  ><div class="work-item">Земляничная поляна</div></a
+               >
+               <a href="/works/strelna.html"
+                  ><div class="work-item">Стрельна</div></a
+               >
             </section>
          </div>
       </main>
@@ -99,6 +115,6 @@
       <script src="/scripts/swiper.js"></script>
       <script src="/scripts/script.js"></script>
       <script src="/scripts/akkordeon.js"></script>
-      <script src="/scripts/portfolioHidden.js"></script>
+      
    </body>
 </html>
