--- a/first-page.html
+++ b/first-page.html
@@ -27,9 +27,9 @@
                   <li>
                      <a href="index.html">Home</a>
                   </li>
-                  <!-- <li>
-                     <a href="/first-page.html">Главная страница</a>
-                  </li> -->
+                  <li>
+                     <a href="#">Главная страница</a>
+                  </li>
                   <li>
                      <a href="/ourWork.html">Наши работы</a>
                   </li>
@@ -293,6 +293,6 @@
       </footer>
       <script src="/scripts/script.js"></script>
       <script src="/scripts/akkordeon.js"></script>
-      <script src="/scripts/hidden.js"></script>
+      
    </body>
 </html>
