--- a/index.html
+++ b/index.html
@@ -8,37 +8,18 @@
       <link rel="stylesheet" href="/style/index.css" />
    </head>
    <body>
-      <!-- <div class="index-menu">
-         <ul class="menu-list">
-            <li class="menu-item">
-               <a href="/portfolio.html"
-                  >Наши работы</a
-               >
-            </li>
-            <li class="menu-item">
-               <a href="">Prices</a>
-            </li>
-            <li class="menu-item">
-               <a href="">Наши контакты</a>
-            </li>
-            <li class="menu-item">
-               <a href="">link</a>
-            </li>
-         </ul>
-      </div> -->
+      
       <div class="wrapper-index">
          <div class="index">
             <div class="index-title">
                <h1 class="index-title-title">Бакеев Групп</h1>
                <p class="index-title-phar">ландшафтная компания</p>
             </div>
-            <!-- <div class="index-link">
-        <a href="/first-page.html">станьте нашим патнером<br><span>войти</span></a>
-      </div> -->
-            <a class="index-link" href="/first-page.html">
-               <div class="index-link-div">
-                  станьте нашим патнером<br /><span>войти</span>
-               </div>
+            <a class="index-link index-link-top" href="/first-page.html">
+               <div class="index-link-div">Войти на сайт<br /></div>
+            </a>
+            <a class="index-link index-link-down" href="/first-page.html">
+               <div class="index-link-div">Позвоните нам</div>
             </a>
          </div>
       </div>
