--- a/works/boksitogorsk.html
+++ b/works/boksitogorsk.html
@@ -29,7 +29,7 @@
                </a>
                <ul class="menu" id="menu">
                   <li>
-                     <a href="index.html">Home</a>
+                     <a href="/index.html">Home</a>
                   </li>
                   <li>
                      <a href="/first-page.html">Главная страница</a>
