подровнял первую страницу

--- a/first-page.html
+++ b/first-page.html
@@ -27,6 +27,7 @@
                   <li>
                      <a href="index.html">Home</a>
                   </li>
+                  <li></li>
                   <li>
                      <a href="#">Главная страница</a>
                   </li>
@@ -35,14 +36,13 @@
                   </li>
                   <li><a href="#">Prices</a></li>
                   <li>
-                     <a href="/form.html">Контакты</a>
+                     <a href="#">Контакты</a>
                   </li>
                </ul>
             </div>
          </div>
       </nav>
       <div class="popup" id="popup"></div>
-
       <main class="main">
          <div class="container">
             <section class="boss">
@@ -293,6 +293,5 @@
       </footer>
       <script src="/scripts/script.js"></script>
       <script src="/scripts/akkordeon.js"></script>
-      
    </body>
 </html>
