--- a/works/kiskelovo.html
+++ b/works/kiskelovo.html
@@ -39,7 +39,7 @@
                   </li>
                   <li><a href="#">Prices</a></li>
                   <li>
-                     <a href="/form.html">Контакты</a>
+                     <a href="#">Контакты</a>
                   </li>
                </ul>
             </div>
