--- a/ourWork.html
+++ b/ourWork.html
@@ -35,7 +35,7 @@
                      <a href="/first-page.html">Главная страница</a>
                   </li>
                   <li>
-                     <a href="/portfolio.html">Наши работы</a>
+                     <a class="active" href="/portfolio.html">Наши работы</a>
                   </li>
                   <li><a href="#">Prices</a></li>
                   <li>
