--- a/first-page.html
+++ b/first-page.html
@@ -29,7 +29,7 @@
                   </li>
                   <li></li>
                   <li>
-                     <a href="#">Главная страница</a>
+                     <a class="active" href="#">Главная страница</a>
                   </li>
                   <li>
                      <a href="/ourWork.html">Наши работы</a>
