переделал страницу ourwork

--- a/first-page.html
+++ b/first-page.html
@@ -5,7 +5,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <link rel="stylesheet" href="/style/style.css" />
-      <title>Garden city</title>
+      <title>Бакеев Групп</title>
    </head>
    <body>
       <nav class="navbar">
@@ -32,7 +32,7 @@
                      <a class="active" href="#">Главная страница</a>
                   </li>
                   <li>
-                     <a href="/ourWork.html">Наши работы</a>
+                     <a href="/ourworks.html">Наши работы</a>
                   </li>
                   <li><a href="#">Prices</a></li>
                   <li>
