--- a/ourWork.html
+++ b/ourWork.html
@@ -9,7 +9,7 @@
       <link
          rel="stylesheet"
          href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
-      <title>Form</title>
+      <title>Our work</title>
    </head>
    <body>
       <nav class="navbar">
@@ -54,7 +54,7 @@
                   ><div class="work-item">Бокситогорск</div></a
                >
                <a href="/works/hizelki.html"
-                  ><div class="work-item">Хизельки</div></a
+                  ><div class="work-item">Хязельки</div></a
                >
                <a href="/works/house_slose_see.html"
                   ><div class="work-item">Дом у моря</div></a
