--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
       <meta charset="UTF-8" />
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Bakeev</title>
+      <title>Бакеев Групп</title>
+      <link type="image/x-icon" href="/image/icons/grass.png" rel="shortcut icon">
       <link rel="stylesheet" href="/style/index.css" />
    </head>
    <body>
