--- a/works/hizelki.html
+++ b/works/hizelki.html
@@ -29,13 +29,13 @@
                </a>
                <ul class="menu" id="menu">
                   <li>
-                     <a href="index.html">Home</a>
+                     <a href="/index.html">Home</a>
                   </li>
                   <li>
                      <a href="/first-page.html">Главная страница</a>
                   </li>
                   <li>
-                     <a href="/ourWork.html">Наши работы</a>
+                     <a href="/ourworks.html">Наши работы</a>
                   </li>
                   <li><a href="#">Prices</a></li>
                   <li>
