--- a/works/strelna.html
+++ b/works/strelna.html
@@ -35,7 +35,7 @@
                      <a href="/first-page.html">Главная страница</a>
                   </li>
                   <li>
-                     <a href="/ourWork.html">Наши работы</a>
+                     <a href="/ourworks.html">Наши работы</a>
                   </li>
                   <li><a href="#">Prices</a></li>
                   <li>
