--- a/works/boksitogorsk.html
+++ b/works/boksitogorsk.html
@@ -35,12 +35,9 @@
                      <a href="/first-page.html">Главная страница</a>
                   </li>
                   <li>
-                     <a href="/ourworks.html">Наши работы</a>
+                     <a class="active" href="/ourworks.html">Наши работы</a>
                   </li>
-                  <li><a href="#">Prices</a></li>
-                  <li>
-                     <a href="#">Контакты</a>
-                  </li>
+                  
                </ul>
             </div>
          </div>
@@ -119,19 +116,19 @@
                      </div>
                      <div class="pictures-wrapper content">
                         <div class="picture-item ">
-                           <img src="/image/boksitogorsk/boksit-1.jpg" alt="" />
+                           <img src="/image/boksitogorsk/boksit-1.jpg" alt="Бокситогорск фото" />
                         </div>
                         <div class="picture-item">
-                           <img src="/image/boksitogorsk/boksit-3.jpg" alt="" />
+                           <img src="/image/boksitogorsk/boksit-3.jpg" alt="Бокситогорск фото" />
                         </div>
                         <div class="picture-item">
-                           <img src="/image/boksitogorsk/boksit-4.jpg" alt="" />
+                           <img src="/image/boksitogorsk/boksit-4.jpg" alt="Бокситогорск фото" />
                         </div>
                         <div class="picture-item">
-                           <img src="/image/boksitogorsk/boksit-2.jpg" alt="" />
+                           <img src="/image/boksitogorsk/boksit-2.jpg" alt="Бокситогорск фото" />
                         </div>
                         <div class="picture-item">
-                           <img src="/image/boksitogorsk/boksit-5.jpg" alt="" />
+                           <img src="/image/boksitogorsk/boksit-5.jpg" alt="Бокситогорск фото" />
                         </div>
                         <div class="picture-item">
                            <img src="" alt="be happy" />
