--- a/works/hizelki.html
+++ b/works/hizelki.html
@@ -35,12 +35,9 @@
                      <a href="/first-page.html">Главная страница</a>
                   </li>
                   <li>
-                     <a href="/ourworks.html">Наши работы</a>
+                     <a class="active"  href="/ourworks.html">Наши работы</a>
                   </li>
-                  <li><a href="#">Prices</a></li>
-                  <li>
-                     <a href="#">Контакты</a>
-                  </li>
+                 
                </ul>
             </div>
          </div>
