--- a/ourworks.html
+++ b/ourworks.html
@@ -24,7 +24,7 @@
                </div>
                <a href="#" class="logo" id="logo">
                   <img
-                     src="https://img2.freepng.ru/20180412/clq/kisspng-company-kara-pardaz-corp-information-industry-logo-5acf00701cb9f2.5213935915235155041177.jpg"
+                     src="/image/logo-x.jpg"
                      alt="" />
                </a>
                <ul class="menu" id="menu">
