убрал фоновые блоки

--- a/first-page.html
+++ b/first-page.html
@@ -19,9 +19,7 @@
                   </div>
                </div>
                <a href="#" class="logo" id="logo">
-                  <img
-                     src="/image/logo-x.jpg"
-                     alt="" />
+                  <img src="/image/logo-x.jpg" alt="" />
                </a>
                <ul class="menu" id="menu">
                   <li>
@@ -34,7 +32,6 @@
                   <li>
                      <a href="/ourworks.html">Наши работы</a>
                   </li>
-                  
                </ul>
             </div>
          </div>
@@ -233,33 +230,10 @@
                   </div>
                </div>
             </section>
-            <!-- <section class="additional">
-               <article class="additional-article">
-                  <div class="content">
-                     <p>
-                        Lorem ipsum dolor, sit amet consectetur adipisicing
-                        elit. Magni tempore natus eligendi, voluptate nesciunt
-                        accusamus sint alias. Quaerat, ut odit neque perferendis
-                        nam nulla earum nisi debitis doloremque velit
-                     </p>
-                  </div>
-               </article>
-               <article class="additional-article">
-                  <div class="content">
-                     <p>
-                        Lorem ipsum dolor, sit amet consectetur adipisicing
-                        elit. Magni tempore natus eligendi, voluptate nesciunt
-                        accusamus sint alias. Quaerat, ut odit neque perferendis
-                        nam nulla earum nisi debitis doloremque velit
-                        voluptates?
-                     </p>
-                  </div>
-               </article>
-            </section> -->
          </div>
       </main>
       <footer class="footer content-footer">
-         <div class="container">
+         <div class="container container-footer">
             <div class="contacts">
                <div class="contacts-icons">
                   <div class="tel">
