--- a/works/hizelki.html
+++ b/works/hizelki.html
@@ -24,7 +24,7 @@
                </div>
                <a href="#" class="logo" id="logo">
                   <img
-                     src="https://img2.freepng.ru/20180412/clq/kisspng-company-kara-pardaz-corp-information-industry-logo-5acf00701cb9f2.5213935915235155041177.jpg"
+                     src="/image/logo-x.jpg"
                      alt="" />
                </a>
                <ul class="menu" id="menu">
@@ -52,7 +52,7 @@
                      <article class="portfolio-text">
                         <div class="content">
                            <div class="portfolio-title">
-                              <h2>Хизельки</h2>
+                              <h2>Хязельки</h2>
                            </div>
                            <p>
                               Lorem ipsum dolor sit amet consectetur adipisicing
@@ -108,7 +108,7 @@
                   </section>
                   <section class="pictures">
                      <div class="pictures-title">
-                        <h2>Хизельки</h2>
+                        <h2>Хязельки</h2>
                      </div>
                      <div class="pictures-wrapper content">
                         <div class="picture-item">
@@ -134,7 +134,7 @@
          </div>
       </main>
       <footer class="footer content-footer">
-         <div class="container">
+         <div class="container container-footer">
             <div class="contacts">
                <div class="contacts-icons">
                   <div class="tel">
