--- a/ourworks.html
+++ b/ourworks.html
@@ -78,6 +78,21 @@
                         </div>
                      </div>
                   </a>
+                  <a href="/works/lednevo.html" class="item-link">
+                     <div class="ourworks-item">
+                        <div class="item-logo">
+                           <img src="/image/icons/excavator.png" alt="" />
+                        </div>
+                        <div class="item-img">
+                           <img
+                              src="/image/lednevo/l-4.jpg"
+                              alt="" />
+                        </div>
+                        <div class="item-name">
+                           <h2>Леднево</h2>
+                        </div>
+                     </div>
+                  </a>
                   <a href="/works/house_slose_see.html" class="item-link">
                      <div class="ourworks-item">
                         <div class="item-logo">
@@ -169,7 +184,7 @@
          </section>
       </main>
       <footer class="footer content-footer">
-         <div class="container">
+         <div class="container container-footer">
             <div class="contacts">
                <div class="contacts-icons">
                   <div class="tel">
