--- a/works/house_slose_see.html
+++ b/works/house_slose_see.html
@@ -55,14 +55,7 @@
                               <h2>Дом у моря</h2>
                            </div>
                            <p>
-                              Lorem ipsum dolor sit amet consectetur adipisicing
-                              elit. Numquam consequatur quaerat, quo aperiam
-                              quam odio illo minima eveniet fugit consectetur
-                              officia, et autem, quasi magni iste earum neque
-                              laborum eos? Exercitationem suscipit vel nulla
-                              distinctio ex ad iusto assumenda eum rerum error
-                              quia cum maiores optio ipsa accusamus enim
-                              deleniti aperiam totam sed e
+                              Вертикальная планировка рельефа. Мощение брусчаткой. Устройство лестниц. Озеленение.
                            </p>
                         </div>
                      </article>
