--- a/works/lednevo.html
+++ b/works/lednevo.html
@@ -55,14 +55,7 @@
                               <h2>Леднёво</h2>
                            </div>
                            <p>
-                              Lorem ipsum dolor sit amet consectetur adipisicing
-                              elit. Numquam consequatur quaerat, quo aperiam
-                              quam odio illo minima eveniet fugit consectetur
-                              officia, et autem, quasi magni iste earum neque
-                              laborum eos? Exercitationem suscipit vel nulla
-                              distinctio ex ad iusto assumenda eum rerum error
-                              quia cum maiores optio ipsa accusamus enim
-                              deleniti aperiam totam sed e
+                              Выполнена вертикальная планировка участка. Мощение брусчаткой. Устройство ступеней и подпорной стенки. Устройство системы полива. Ландшафтное освещение. Озеленение и устройство газона. Укрепление и благоустройство берега.
                            </p>
                         </div>
                      </article>
