--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
       <meta charset="UTF-8" />
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Бакеев Групп</title>
-      <link type="image/x-icon" href="/image/icons/grass.png" rel="shortcut icon">
+      <link rel="icon" type="image/png" sizes="32x32" href="/image/five/favicon-32x32.png"> 
       <link rel="stylesheet" href="/style/index.css" />
+      <title>Бакеев Групп</title>
    </head>
    <body>
       
