--- a/ourworks.html
+++ b/ourworks.html
@@ -51,7 +51,7 @@
                   <a href="/works/boksitogorsk.html" class="item-link">
                      <div class="ourworks-item">
                         <div class="item-logo">
-                           <img src="/image/icons/excavator.png" alt="" />
+                           <img src="/image/five/android-chrome-512x512.png" alt="" />
                         </div>
                         <div class="item-img">
                            <img
@@ -66,7 +66,7 @@
                   <a href="/works/hizelki.html" class="item-link">
                      <div class="ourworks-item">
                         <div class="item-logo">
-                           <img src="/image/icons/excavator.png" alt="" />
+                           <img src="/image/five/android-chrome-512x512.png" alt="" />
                         </div>
                         <div class="item-img">
                            <img
@@ -81,7 +81,7 @@
                   <a href="/works/lednevo.html" class="item-link">
                      <div class="ourworks-item">
                         <div class="item-logo">
-                           <img src="/image/icons/excavator.png" alt="" />
+                           <img src="/image/five/android-chrome-512x512.png" alt="" />
                         </div>
                         <div class="item-img">
                            <img
@@ -96,7 +96,7 @@
                   <a href="/works/house_slose_see.html" class="item-link">
                      <div class="ourworks-item">
                         <div class="item-logo">
-                           <img src="/image/icons/excavator.png" alt="" />
+                           <img src="/image/five/android-chrome-512x512.png" alt="" />
                         </div>
                         <div class="item-img">
                            <img
@@ -111,7 +111,7 @@
                   <a href="/works/kiskelovo.html" class="item-link">
                      <div class="ourworks-item">
                         <div class="item-logo">
-                           <img src="/image/icons/excavator.png" alt="" />
+                           <img src="/image/five/android-chrome-512x512.png" alt="" />
                         </div>
                         <div class="item-img">
                            <img
@@ -126,7 +126,7 @@
                   <a href="/works/novo_toksovo.html" class="item-link">
                      <div class="ourworks-item">
                         <div class="item-logo">
-                           <img src="/image/icons/excavator.png" alt="" />
+                           <img src="/image/five/android-chrome-512x512.png" alt="" />
                         </div>
                         <div class="item-img">
                            <img
@@ -141,7 +141,7 @@
                   <a href="/works/ozerki.html" class="item-link">
                      <div class="ourworks-item">
                         <div class="item-logo">
-                           <img src="/image/icons/excavator.png" alt="" />
+                           <img src="/image/five/android-chrome-512x512.png" alt="" />
                         </div>
                         <div class="item-img">
                            <img src="/image/ozerki/o-min/o-7.jpg" alt="" />
@@ -154,7 +154,7 @@
                   <a href="/works/strawberry.html" class="item-link">
                      <div class="ourworks-item">
                         <div class="item-logo">
-                           <img src="/image/icons/excavator.png" alt="" />
+                           <img src="/image/five/android-chrome-512x512.png" alt="" />
                         </div>
                         <div class="item-img">
                            <img
@@ -169,7 +169,7 @@
                   <a href="/works/strelna.html" class="item-link">
                      <div class="ourworks-item">
                         <div class="item-logo">
-                           <img src="/image/icons/excavator.png" alt="" />
+                           <img src="/image/five/android-chrome-512x512.png" alt="" />
                         </div>
                         <div class="item-img">
                            <img src="/image/strelna/st-min/str-6.jpg" alt="" />
