фото, галки, ссылка

--- a/first-page.html
+++ b/first-page.html
@@ -5,7 +5,11 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <link rel="stylesheet" href="/style/style.css" />
-      <link rel="icon" type="image/png" sizes="32x32" href="/image/five/favicon-32x32.png"> 
+      <link
+         rel="icon"
+         type="image/png"
+         sizes="32x32"
+         href="/image/five/favicon-32x32.png" />
       <title>Бакеев Групп</title>
    </head>
    <body>
@@ -44,9 +48,7 @@
                <div class="content">
                   <div class="boss-container">
                      <div class="boss-img">
-                        <img
-                           src="/image/team.jpg"
-                           alt="" />
+                        <img src="/image/sute .jpg" alt="" />
                         <p>Вадим Бакеев</p>
                      </div>
                      <div class="boss-text">
@@ -76,7 +78,8 @@
                         </p>
                         <a
                            class="review"
-                           href="https://profi.ru/backoffice/a.php?z=q&"
+                           target="_blank"
+                           href="https://profi.ru/profile/BakeevVV/"
                            >Отзывы о нашей компании Вы можете найти здесь</a
                         >
                      </div>
