--- a/works/boksitogorsk.html
+++ b/works/boksitogorsk.html
@@ -54,9 +54,17 @@
                            <div class="portfolio-title">
                               <h2>Бокситогорск</h2>
                            </div>
-                           <p>
+                           <ul class="workname-list">
+                              <li> <p class="workname-item">Проводились работы по благоустройству общественных пространств.</p></li>
+                              <li> <p class="workname-item">Мощение тротуарной плиткой.</p></li>
+                              <li> <p class="workname-item">Укладка рулонного газона.</p></li>
+                              <li> <p class="workname-item">Строительство подпорной стены.</p></li>
+                             
+                              
+                           </ul>
+                           <!-- <p>
                               Проводились работы по благоустройству общественных пространств.  Мощение тротуарной плиткой. Укладка рулонного газона. Строительство подпорной стены.
-                           </p>
+                           </p> -->
                         </div>
                      </article>
                      <article class="portfolio-gallery">
