работа списком, ссылки цвет

--- a/works/house_slose_see.html
+++ b/works/house_slose_see.html
@@ -5,6 +5,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <link rel="stylesheet" href="/style/style.css" />
+      <link rel="icon" type="image/png" sizes="32x32" href="/image/five/favicon-32x32.png"> 
       <!-- подключил свайпер -->
       <link
          rel="stylesheet"
@@ -54,9 +55,26 @@
                            <div class="portfolio-title">
                               <h2>Дом у моря</h2>
                            </div>
-                           <p>
+                           <ul class="workname-list">
+                              <li>
+                                 <p class="workname-item">
+                                    Вертикальная планировка рельефа.
+                                 </p>
+                              </li>
+                              <li>
+                                 <p class="workname-item">
+                                    Мощение брусчаткой. 
+                                 </p>
+                              </li>
+                              <li>
+                                 <p class="workname-item">
+                                    Устройство лестниц. Озеленение.
+                                 </p>
+                              </li>
+                           </ul>
+                           <!-- <p>
                               Вертикальная планировка рельефа. Мощение брусчаткой. Устройство лестниц. Озеленение.
-                           </p>
+                           </p> -->
                         </div>
                      </article>
                      <article class="portfolio-gallery">
