--- a/works/kiskelovo.html
+++ b/works/kiskelovo.html
@@ -5,6 +5,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <link rel="stylesheet" href="/style/style.css" />
+      <link rel="icon" type="image/png" sizes="32x32" href="/image/five/favicon-32x32.png"> 
       <!-- подключил свайпер -->
       <link
          rel="stylesheet"
@@ -54,9 +55,31 @@
                            <div class="portfolio-title">
                               <h2>Кскелово</h2>
                            </div>
-                           <p>
+                           <ul class="workname-list">
+                              <li>
+                                 <p class="workname-item">
+                                    Устройство дренажа участка.
+                                 </p>
+                              </li>
+                              <li>
+                                 <p class="workname-item">
+                                    Мощение тротуарной плиткой.
+                                 </p>
+                              </li>
+                              <li>
+                                 <p class="workname-item">
+                                    Ланшафтное освещение.
+                                 </p>
+                              </li>
+                              <li>
+                                 <p class="workname-item">
+                                    Устройство рулонного газона.
+                                 </p>
+                              </li>
+                           </ul>
+                           <!-- <p>
                               Устройство дренажа участка. Мощение тротуарной плиткой. Ланшафтное освещение.  Устройство рулонного газона.
-                           </p>
+                           </p> -->
                         </div>
                      </article>
                      <article class="portfolio-gallery">
