--- a/works/lednevo.html
+++ b/works/lednevo.html
@@ -5,6 +5,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <link rel="stylesheet" href="/style/style.css" />
+      <link rel="icon" type="image/png" sizes="32x32" href="/image/five/favicon-32x32.png"> 
       <!-- подключил свайпер -->
       <link
          rel="stylesheet"
@@ -54,10 +55,47 @@
                            <div class="portfolio-title">
                               <h2>Леднёво</h2>
                            </div>
-                           <p>
+                           <ul class="workname-list">
+                              <li>
+                                 <p class="workname-item">
+                                    Выполнена вертикальная планировка участка.
+                                 </p>
+                              </li>
+                              <li>
+                                 <p class="workname-item">
+                                    Мощение брусчаткой.
+                                 </p>
+                              </li>
+                              <li>
+                                 <p class="workname-item">
+                                    Устройство ступеней и подпорной стенки.
+                                 </p>
+                              </li>
+                              <li>
+                                 <p class="workname-item">
+                                    Устройство системы полива.
+                                 </p>
+                              </li>
+                              <li>
+                                 <p class="workname-item">
+                                    Ландшафтное освещение. 
+                                 </p>
+                              </li>
+                              <li>
+                                 <p class="workname-item">
+                                    Озеленение и устройство газона.
+                                 </p>
+                              </li>
+                              <li>
+                                 <p class="workname-item">
+                                    Укрепление и благоустройство берега.
+                                 </p>
+                              </li>
+                           </ul>
+                           <!-- <p>
                               Выполнена вертикальная планировка участка. Мощение брусчаткой. Устройство ступеней и подпорной стенки. Устройство системы полива. Ландшафтное освещение. Озеленение и устройство газона. Укрепление и благоустройство берега.
                            </p>
-                        </div>
+                        </div> -->
                      </article>
                      <article class="portfolio-gallery">
                         <!-- Slider main container -->
