--- a/works/ozerki.html
+++ b/works/ozerki.html
@@ -5,6 +5,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <link rel="stylesheet" href="/style/style.css" />
+      <link rel="icon" type="image/png" sizes="32x32" href="/image/five/favicon-32x32.png"> 
       <!-- подключил свайпер -->
       <link
          rel="stylesheet"
@@ -54,9 +55,41 @@
                            <div class="portfolio-title">
                               <h2>Озерки</h2>
                            </div>
-                           <p>
+                           <ul class="workname-list">
+                              <li>
+                                 <p class="workname-item">
+                                    Устройство дренажа.
+                                 </p>
+                              </li>
+                              <li>
+                                 <p class="workname-item">
+                                    Мощение натуральным камнем.
+                                 </p>
+                              </li>
+                              <li>
+                                 <p class="workname-item">
+                                    Ландшафтное освещение.
+                                 </p>
+                              </li>
+                              <li>
+                                 <p class="workname-item">
+                                    Укрепление дренажной канавы. 
+                                 </p>
+                              </li>
+                              <li>
+                                 <p class="workname-item">
+                                    Газон.
+                                 </p>
+                              </li>
+                              <li>
+                                 <p class="workname-item">
+                                    Забор.
+                                 </p>
+                              </li>
+                           </ul>
+                           <!-- <p>
                               Устройство дренажа. Мощение натуральным камнем. Ландшафтное освещение. Укрепление дренажной канавы. Газон. Забор.
-                           </p>
+                           </p> -->
                         </div>
                      </article>
                      <article class="portfolio-gallery">
