--- a/works/strelna.html
+++ b/works/strelna.html
@@ -5,6 +5,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <link rel="stylesheet" href="/style/style.css" />
+      <link rel="icon" type="image/png" sizes="32x32" href="/image/five/favicon-32x32.png"> 
       <!-- подключил свайпер -->
       <link
          rel="stylesheet"
@@ -54,9 +55,42 @@
                            <div class="portfolio-title">
                               <h2>Стрельна</h2>
                            </div>
-                           <p>
+                           <ul class="workname-list">
+                              <li>
+                                 <p class="workname-item">
+                                    Дренажные работы.
+                                 </p>
+                              </li>
+                              <li>
+                                 <p class="workname-item">
+                                    Мощение брусчаткой.
+                                 </p>
+                              </li>
+                              <li>
+                                 <p class="workname-item">
+                                    Устройство рулонного газона.
+                                 </p>
+                              </li>
+                              <li>
+                                 <p class="workname-item">
+                                    Ландшафтное освещение.
+                                 </p>
+                              </li>
+                              <li>
+                                 <p class="workname-item">
+                                    Ландшафтное освещение. 
+                                 </p>
+                              </li>
+                              <li>
+                                 <p class="workname-item">
+                                    Система полива.
+                                 </p>
+                              </li>
+                              
+                           </ul>
+                           <!-- <p>
                               Дренажные работы. Мощение брусчаткой. Устройство рулонного газона. Ландшафтное освещение. Система полива.
-                           </p>
+                           </p> -->
                         </div>
                      </article>
                      <article class="portfolio-gallery">
